feature/new-changes3

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
@@ -8,12 +8,12 @@
     <br />
     <br />
     <form action="Register" method="post">
-        <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em" align="center" class="table-striped" width="600" height="300">
+        <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; border-radius:9px; border-width:1px" align="center" class="table-striped" width="600" height="300">
             <tr>
                 <td colspan="2"><img src="~/Images/avatar.png" alt="Avatar" height="100" width="100" style="margin-left:175pt"></td>
                 <td></td>
             </tr>
-            <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Registracija</caption>
+            <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt; border-radius:9px; border-width:1px">Registracija</caption>
             <tr>
                 <td style="font-family:'Comic Sans MS'">Korisničko ime:</td>
                 <td><input type="text" placeholder="bar 3 karaktera" name="korisnickoIme" style="border-radius:9px; border-width:1px" /></td>
