--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/IzmeniVozilo.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/IzmeniVozilo.cshtml
@@ -3,63 +3,63 @@
     ViewBag.Title = "IzmeniVozilo";
 }
 
-<body background="~/Images/pozadina.jpg">
+<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
 
-    <h2 style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Times New Roman', Times, serif; font-style:italic; font-weight:500; color:darkblue">Izmeni sadrzaj vozila</h2>
     <br />
     <br />
     <br />
 
     <form action="~/Vozilo/IzmeniProfilVozila" method="post">
-        <table style="background-color:aliceblue" align="center" class="table-striped" width="600" height="400">
+        <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS'" align="center" class="table-striped" width="600" height="400">
+            <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Izmeni sadržaj vozila</caption>
             <tr>
                 <th>Marka vozila</th>
-                <td><input type="text" name="MarkaVozila" value="@ViewBag.vozilo.MarkaVozila" /></td>
+                <td><input type="text" name="MarkaVozila" value="@ViewBag.vozilo.MarkaVozila" style="border-radius:9px; border-width:1px"/></td>
             </tr>
             <tr>
                 <th>Marka vozila</th>
-                <td><input type="text" name="ModelVozila" value="@ViewBag.vozilo.ModelVozila" /></td>
+                <td><input type="text" name="ModelVozila" value="@ViewBag.vozilo.ModelVozila" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Tip vozila</th>
-                <td><input type="text" name="TipVozila" value="@ViewBag.vozilo.TipVozila" /></td>
+                <td><input type="text" name="TipVozila" value="@ViewBag.vozilo.TipVozila" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Broj mesta</th>
-                <td><input type="number" name="BrojMestaUVozilu" value="@ViewBag.vozilo.BrojMestaUVozilu" /></td>
+                <td><input type="number" name="BrojMestaUVozilu" value="@ViewBag.vozilo.BrojMestaUVozilu" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Vreme odrzavanja</th>
-                <td><input type="date" name="DatumKadJeSlobodnoVozilo" value="@ViewBag.vozilo.DatumKadJeSlobodnoVozilo" /></td>
+                <td><input type="date" name="DatumKadJeSlobodnoVozilo" value="@ViewBag.vozilo.DatumKadJeSlobodnoVozilo" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Cena regular karta [RSD]</th>
-                <td><input type="number" name="CenaPoDanu" value="@ViewBag.vozilo.CenaPoDanu" /></td>
+                <td><input type="number" name="CenaPoDanu" value="@ViewBag.vozilo.CenaPoDanu" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Ulica</th>
-                <td><input type="text" name="Ulica" value="@ViewBag.vozilo.Ulica" /></td>
+                <td><input type="text" name="Ulica" value="@ViewBag.vozilo.Ulica" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Broj</th>
-                <td><input type="text" name="Broj" value="@ViewBag.vozilo.Broj" /></td>
+                <td><input type="text" name="Broj" value="@ViewBag.vozilo.Broj" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Mesto</th>
-                <td><input type="text" name="Mesto" value="@ViewBag.vozilo.Mesto" /></td>
+                <td><input type="text" name="Mesto" value="@ViewBag.vozilo.Mesto" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Postanski broj</th>
-                <td><input type="text" name="postanskiBroj" value="@ViewBag.vozilo.PostanskiBroj" /></td>
+                <td><input type="text" name="postanskiBroj" value="@ViewBag.vozilo.PostanskiBroj" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Poster</th>
-                <td><input type="text" name="poster" value="@ViewBag.vozilo.Poster" /></td>
+                <td><input type="text" name="poster" value="@ViewBag.vozilo.Poster" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Izmeni informacije</th>
                 <td>
-                    <input type="submit" class="btn btn-info" value="Izmeni" />
+                    <input type="submit" class="btn btn-info" value="Izmeni" style="border-radius:9px; width:100px" />
                 </td>
             </tr>
         </table>
